Defined biztechMembers2022 table & renamed all 'memberships' to 'members'
