# docs/api.yml
@@ -484,12 +484,12 @@ paths:
           schema:
             type: string
 
-  /memberships:
+  /members:
     get:
-      summary: Returns all users who signed up for membership
-      operationId: getMemberships
+      summary: Returns all users who signed up for members
+      operationId: getMembers
       tags:
-        - Memberships
+        - Members
       responses:
         "200":
           description: "OK"
@@ -498,7 +498,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: "#/components/schemas/MembershipsGetResponse"
+                  $ref: "#/components/schemas/MembersGetResponse"
         "401":
           description: "Unauthorized"
         "403":
@@ -506,29 +506,29 @@ paths:
         "502":
           description: "Internal Server Error"
     post:
-      summary: Creates a new membership
-      operationId: postMemberships
+      summary: Creates a new member
+      operationId: postMembers
       tags:
-        - Memberships
+        - Members
       requestBody:
         required: true
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/MembershipsPostBody"
+              $ref: "#/components/schemas/MembersPostBody"
       responses:
         "201":
           description: "Created!"
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/MembershipsPostResponse"
+                $ref: "#/components/schemas/MembersPostResponse"
         "401":
           description: Unauthorized
         "406":
           description: "{object} not specified"
         "409":
-          description: "Membership could not be created because {object} already exists"
+          description: "Member could not be created because {object} already exists"
         "502":
           description: "Internal Server Error"
 
@@ -811,7 +811,7 @@ components:
             Attributes:
               $ref: "#/components/schemas/RegistrationsPostBody"
 
-    MembershipsGetResponse:
+    MembersGetResponse:
       type: object
       required:
         - email
@@ -838,7 +838,7 @@ components:
             type: string
         heard_from:
           type: string
-    MembershipsPostBody:
+    MembersPostBody:
       type: object
       required:
         - email
@@ -859,7 +859,7 @@ components:
             type: string
         heard_from:
           type: string
-    MembershipsPostResponse:
+    MembersPostResponse:
       type: object
       required:
         - message
@@ -873,4 +873,4 @@ components:
             - Item
           properties:
             Item:
-              $ref: "#/components/schemas/MembershipsPostBody"
+              $ref: "#/components/schemas/MembersPostBody"
