# services/members/handler.js
@@ -1,17 +1,17 @@
 import helpers from '../../lib/handlerHelpers';
 import db from '../../lib/db';
-const { MEMBERSHIPS_TABLE } = require('../../constants/tables');
+const { MEMBERS2022_TABLE } = require('../../constants/tables');
 
 export const getAll = async(event, ctx, callback) => {
 
   try {
 
     // scan the table
-    const memberships = await db.scan(MEMBERSHIPS_TABLE);
+    const members = await db.scan(MEMBERS2022_TABLE);
 
     // re-organize the response
     let response = {};
-    if (memberships !== null) response = helpers.createResponse(200, memberships);
+    if (members !== null) response = helpers.createResponse(200, members);
 
     // return the response object
     callback(null, response);
